added structure and a few sources

--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,9 @@
 \doublespacing
 
 \input{paper/introduction}
+\input{paper/experiments.tex}
+\input{paper/complex.tex}
+\input{paper/repeaters.tex}
 
 \clearpage
 \addcontentsline{toc}{section}{References}
