--- a/references.bib
+++ b/references.bib
@@ -1,7 +1,90 @@
-@article{Max,
-  author = {Max},
-  journal = {Phsyics},
-  number = {1},
-  title = {Best Physics},
-  year = {2000}
-}
+%% This BibTeX bibliography file was created using BibDesk.
+%% https://bibdesk.sourceforge.io/
+
+%% Created for Max Eriksson at 2024-12-09 15:04:06 +0100 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@article{Azuma:2023,
+	author = {Azuma, Koji and Economou, Sophia E. and Elkouss, David and Hilaire, Paul and Jiang, Liang and Lo, Hoi-Kwong and Tzitrin, Ilan},
+	date = {2023/12/20/},
+	date-added = {2024-12-09 15:03:56 +0100},
+	date-modified = {2024-12-09 15:04:02 +0100},
+	day = {20},
+	doi = {10.1103/RevModPhys.95.045006},
+	id = {10.1103/RevModPhys.95.045006},
+	j1 = {RMP},
+	journal = {Reviews of Modern Physics},
+	journal1 = {Rev. Mod. Phys.},
+	month = {12},
+	number = {4},
+	pages = {045006--},
+	publisher = {American Physical Society},
+	title = {Quantum repeaters: From quantum networks to the quantum internet},
+	url = {https://link.aps.org/doi/10.1103/RevModPhys.95.045006},
+	volume = {95},
+	year = {2023},
+	bdsk-url-1 = {https://link.aps.org/doi/10.1103/RevModPhys.95.045006},
+	bdsk-url-2 = {https://doi.org/10.1103/RevModPhys.95.045006}}
+
+@article{Valivarthi:2016,
+	abstract = {The first field test of quantum teleportation is implemented across a metropolitan fibre network with independent quantum light sources. To establish a robust quantum teleportation system in the real world, several feedback mechanisms are developed.},
+	author = {Valivarthi, Raju and Puigibert, Marcel. li Grimau and Zhou, Qiang and Aguilar, Gabriel H. and Verma, Varun B. and Marsili, Francesco and Shaw, Matthew D. and Nam, Sae Woo and Oblak, Daniel and Tittel, Wolfgang},
+	date = {2016/10/01},
+	date-added = {2024-12-09 14:54:29 +0100},
+	date-modified = {2024-12-09 14:54:38 +0100},
+	doi = {10.1038/nphoton.2016.180},
+	id = {Valivarthi2016},
+	isbn = {1749-4893},
+	journal = {Nature Photonics},
+	number = {10},
+	pages = {676--680},
+	title = {Quantum teleportation across a metropolitan fibre network},
+	url = {https://doi.org/10.1038/nphoton.2016.180},
+	volume = {10},
+	year = {2016},
+	bdsk-url-1 = {https://doi.org/10.1038/nphoton.2016.180}}
+
+@article{Takesue:2015,
+	abstract = {Quantum teleportation is an essential quantum operation by which we can transfer an unknown quantum state to a remote location with the help of quantum entanglement and classical communication. Since the first experimental demonstrations using photonic qubits and continuous variables, the distance of photonic quantum teleportation over free-space channels has continued to increase and has reached {$>$}100\&{\#}x2009;\&{\#}x2009;km. On the other hand, quantum teleportation over optical fiber has been challenging, mainly because the multifold photon detection that inevitably accompanies quantum teleportation experiments has been very inefficient due to the relatively low detection efficiencies of typical telecom-band single-photon detectors. Here, we report on quantum teleportation over optical fiber using four high-detection-efficiency superconducting nanowire single-photon detectors (SNSPDs). These SNSPDs make it possible to perform highly efficient multifold photon measurements, allowing us to confirm that the quantum states of input photons were successfully teleported over 100\&{\#}xA0;km of fiber with an average fidelity of 83.7\&{\#}xB1;2.0{\%}.},
+	author = {Takesue, Hiroki and Dyer, Shellee D. and Stevens, Martin J. and Verma, Varun and Mirin, Richard P. and Nam, Sae Woo},
+	date = {2015/10/20},
+	date-added = {2024-12-09 14:54:15 +0100},
+	date-modified = {2024-12-09 14:54:23 +0100},
+	doi = {10.1364/OPTICA.2.000832},
+	j2 = {Optica},
+	journal = {Optica},
+	journal1 = {Optica},
+	journal2 = {Optica},
+	journal3 = {Optica},
+	keywords = {Quantum detectors; Quantum communications; Quantum information and processing; Mode-locked fiber lasers; Optical fibers; Photonic entanglement; Quantum key distribution; Quantum teleportation; Superconducting nanowire single photon detectors},
+	number = {10},
+	pages = {832--835},
+	publisher = {Optica Publishing Group},
+	title = {Quantum teleportation over 100\&{\#}x2009;\&{\#}x2009;km of fiber using highly efficient superconducting nanowire single-photon detectors},
+	url = {https://opg.optica.org/optica/abstract.cfm?URI=optica-2-10-832},
+	volume = {2},
+	year = {2015},
+	bdsk-url-1 = {https://opg.optica.org/optica/abstract.cfm?URI=optica-2-10-832},
+	bdsk-url-2 = {https://doi.org/10.1364/OPTICA.2.000832}}
+
+@article{Ren:2017,
+	abstract = {Quantum teleportation of single-photon qubits from a ground observatory to a satellite in low-Earth orbit via an uplink channel is achieved with a fidelity that is well above the classical limit.},
+	author = {Ren, Ji-Gang and Xu, Ping and Yong, Hai-Lin and Zhang, Liang and Liao, Sheng-Kai and Yin, Juan and Liu, Wei-Yue and Cai, Wen-Qi and Yang, Meng and Li, Li and Yang, Kui-Xing and Han, Xuan and Yao, Yong-Qiang and Li, Ji and Wu, Hai-Yan and Wan, Song and Liu, Lei and Liu, Ding-Quan and Kuang, Yao-Wu and He, Zhi-Ping and Shang, Peng and Guo, Cheng and Zheng, Ru-Hua and Tian, Kai and Zhu, Zhen-Cai and Liu, Nai-Le and Lu, Chao-Yang and Shu, Rong and Chen, Yu-Ao and Peng, Cheng-Zhi and Wang, Jian-Yu and Pan, Jian-Wei},
+	date = {2017/09/01},
+	date-added = {2024-12-09 14:40:28 +0100},
+	date-modified = {2024-12-09 14:40:51 +0100},
+	doi = {10.1038/nature23675},
+	id = {Ren2017},
+	isbn = {1476-4687},
+	journal = {Nature},
+	number = {7670},
+	pages = {70--73},
+	title = {Ground-to-satellite quantum teleportation},
+	url = {https://doi.org/10.1038/nature23675},
+	volume = {549},
+	year = {2017},
+	bdsk-url-1 = {https://doi.org/10.1038/nature23675}}
