--- a/references.bib
+++ b/references.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Max Eriksson at 2024-12-09 15:04:06 +0100 
+%% Created for Max Eriksson at 2024-12-10 14:58:46 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -53,7 +53,7 @@
 	author = {Takesue, Hiroki and Dyer, Shellee D. and Stevens, Martin J. and Verma, Varun and Mirin, Richard P. and Nam, Sae Woo},
 	date = {2015/10/20},
 	date-added = {2024-12-09 14:54:15 +0100},
-	date-modified = {2024-12-09 14:54:23 +0100},
+	date-modified = {2024-12-10 14:58:45 +0100},
 	doi = {10.1364/OPTICA.2.000832},
 	j2 = {Optica},
 	journal = {Optica},
@@ -64,7 +64,7 @@
 	number = {10},
 	pages = {832--835},
 	publisher = {Optica Publishing Group},
-	title = {Quantum teleportation over 100\&{\#}x2009;\&{\#}x2009;km of fiber using highly efficient superconducting nanowire single-photon detectors},
+	title = {Quantum teleportation over 100 km of fiber using highly efficient superconducting nanowire single-photon detectors},
 	url = {https://opg.optica.org/optica/abstract.cfm?URI=optica-2-10-832},
 	volume = {2},
 	year = {2015},
