--- a/format/preamble.tex
+++ b/format/preamble.tex
@@ -74,3 +74,16 @@
 
 % using inkscapefiles
 \graphicspath{{figures/}}
+
+%\begin{comment}
+\usepackage{fontspec}
+
+\setmainfont{LTRemark}[
+    Path=./font/,
+    Extension = .otf,
+    UprightFont=*-Roman,
+    BoldFont=*-Bold,
+    ItalicFont=*-Italic,
+    BoldItalicFont=*-BoldItalic
+]
+%\end{comment}
