added some bullets

--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -1,1 +1,6 @@
 \section{Introduction}
+\begin{itemize}
+    \item Quantum teleportation protocol
+    \item Why is it needed?
+    \item Areas of application, quantum communications, quantum computers
+\end{itemize}
