--- a/paper/complex.tex
+++ b/paper/complex.tex
@@ -1,1 +1,7 @@
 \section{Teleportation of Complex Quantum Systems}
+\begin{itemize}
+    \item What is a complex system?
+    \item How does the protocol differ from simple systems?
+    \item Why is it important to be able to teleport complex quantum systems?
+    \item Theoretical and experimental limits
+\end{itemize}
