--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -3,4 +3,6 @@
     \item Quantum teleportation protocol
     \item Why is it needed?
     \item Areas of application, quantum communications, quantum computers
+    \item what is needed to realize it on a large scale, i.e. quantum repeaters, memory...
+    \item EPR-pairs and bell basis
 \end{itemize}
