added some text in the introduction

--- a/paper/experiments.tex
+++ b/paper/experiments.tex
@@ -1,23 +1,30 @@
 \section{Experimental Evidence}
 Experimental evidence for quantum teleportation in quantum communications.
-\begin{itemize}
-    \item Quantum teleportation has experimental evidence
-    \item Experimental hurdles
-\end{itemize}
+\begin{mybox}{Bullet points}
+    \begin{itemize}
+        \item Quantum teleportation has experimental evidence
+        \item Experimental hurdles
+    \end{itemize}
+\end{mybox}
 \subsection{Satellite Based}
 1400 km \cite{Ren:2017}
-\begin{itemize}
-    \item Protocol used
-    \item distance
-    \item technical difficulties and innovations
-    \item what does this mean for quantum communications?
-\end{itemize}
+\begin{mybox}{Bullet points}
+    \begin{itemize}
+        \item Protocol used
+        \item distance
+        \item technical difficulties and innovations
+        \item what does this mean for quantum communications?
+    \end{itemize}
+\end{mybox}
+
 
 \subsection{Fibre Network Based}
-100 km \cite{Takesue:2015}. Metropolitan \cite{Valivarthi:2016} 
-\begin{itemize}
-    \item Protocol used
-    \item distance
-    \item technical difficulties and innovations
-    \item what does this mean for quantum communications?
-\end{itemize}
+100 km \cite{Takesue:2015}. Metropolitan \cite{Valivarthi:2016}
+\begin{mybox}{Bullet points}
+    \begin{itemize}
+        \item Protocol used
+        \item distance
+        \item technical difficulties and innovations
+        \item what does this mean for quantum communications?
+    \end{itemize}
+\end{mybox} 
