--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,61 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Max Eriksson at 2024-12-10 14:58:46 +0100 
+%% Created for Max Eriksson at 2024-12-11 16:08:55 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Bennett:1993,
+	author = {Bennett, Charles and Brassard, Gilles and Cr{\'e}peau, Claude and Jozsa, Richard and Peres, Asher and Wootters, William},
+	date = {1993/04/01},
+	date-added = {2024-12-11 16:08:46 +0100},
+	date-modified = {2024-12-11 16:08:52 +0100},
+	doi = {10.1103/PhysRevLett.70.1895},
+	journal = {Physical review letters},
+	month = {04},
+	pages = {1895--1899},
+	title = {Teleporting an unknown quantum state via dual classical and Einstein-Podolsky-Rosen channels},
+	volume = {70},
+	year = {1993},
+	bdsk-url-1 = {https://doi.org/10.1103/PhysRevLett.70.1895}}
+
+@book{Nielsen:2010,
+	abstract = {One of the most cited books in physics of all time, Quantum Computation and Quantum Information remains the best textbook in this exciting field of science. This 10th anniversary edition includes an introduction from the authors setting the work in context. This comprehensive textbook describes such remarkable effects as fast quantum algorithms, quantum teleportation, quantum cryptography and quantum error-correction. Quantum mechanics and computer science are introduced before moving on to describe what a quantum computer is, how it can be used to solve problems faster than 'classical' computers and its real-world implementation. It concludes with an in-depth treatment of quantum information. Containing a wealth of figures and exercises, this well-known textbook is ideal for courses on the subject, and will interest beginning graduate students and researchers in physics, computer science, mathematics, and electrical engineering.},
+	address = {Cambridge},
+	author = {Nielsen, Michael A. and Chuang, Isaac L.},
+	date-added = {2024-12-11 15:58:22 +0100},
+	date-modified = {2024-12-11 15:58:29 +0100},
+	db = {Cambridge Core},
+	doi = {DOI: 10.1017/CBO9780511976667},
+	dp = {Cambridge University Press},
+	isbn = {9781107002173},
+	publisher = {Cambridge University Press},
+	title = {Quantum Computation and Quantum Information: 10th Anniversary Edition},
+	url = {https://www.cambridge.org/core/product/01E10196D0A682A6AEFFEA52D53BE9AE},
+	year = {2010},
+	bdsk-url-1 = {https://www.cambridge.org/core/product/01E10196D0A682A6AEFFEA52D53BE9AE},
+	bdsk-url-2 = {https://doi.org/10.1017/CBO9780511976667}}
+
+@article{Hu:2023,
+	abstract = {Thirty years after it was first proposed, quantum teleportation remains one of the most important protocols in quantum information and quantum technologies, enabling the nonlocal transmission of an unknown quantum state. Quantum teleportation can be used to overcome the distance limitation in directly transferring quantum states in quantum communication and the difficulty in realizing long-range interactions among qubits in quantum computation. Since 2015, experimental quantum teleportation has moved from simple to complex quantum states (multiple degrees of freedom, high-dimensional quantum states) and from proof-of-principle demonstrations to real-world applications. We overview these advances, in particular, the understanding of the nonclassical nature of quantum teleportation, the teleportation of complex quantum states, progress in experiments with photons, atoms and solid-state systems and applications to quantum communication and computation, and discuss the challenges and opportunities for future developments.},
+	author = {Hu, Xiao-Min and Guo, Yu and Liu, Bi-Heng and Li, Chuan-Feng and Guo, Guang-Can},
+	date = {2023/06/01},
+	date-added = {2024-12-11 15:43:20 +0100},
+	date-modified = {2024-12-11 15:43:25 +0100},
+	doi = {10.1038/s42254-023-00588-x},
+	id = {Hu2023},
+	isbn = {2522-5820},
+	journal = {Nature Reviews Physics},
+	number = {6},
+	pages = {339--353},
+	title = {Progress in quantum teleportation},
+	url = {https://doi.org/10.1038/s42254-023-00588-x},
+	volume = {5},
+	year = {2023},
+	bdsk-url-1 = {https://doi.org/10.1038/s42254-023-00588-x}}
 
 @article{Azuma:2023,
 	author = {Azuma, Koji and Economou, Sophia E. and Elkouss, David and Hilaire, Paul and Jiang, Liang and Lo, Hoi-Kwong and Tzitrin, Ilan},
