--- a/format/preamble.tex
+++ b/format/preamble.tex
@@ -87,3 +87,6 @@
     BoldItalicFont=*-BoldItalic
 ]
 %\end{comment}
+
+\usepackage{tcolorbox}
+\newtcolorbox{mybox}[1]{colback=red!5!white,colframe=red!75!black,fonttitle=\bfseries,title=#1}
