--- a/paper/repeaters.tex
+++ b/paper/repeaters.tex
@@ -1,9 +1,11 @@
 \section{Quantum Repeaters and Quantum Memory}
 Quantum internet \cite{Azuma:2023}
-\begin{itemize}
-    \item quantum repeater analogues to normal repeater?
-    \item How to realize quantum memory 
-    \item why do we need quantum memory for quantum repeaters
-    \item how much does a quantum repeater reduce attenuation
-    \item how good are today's quantum repeaters?
-\end{itemize}
+\begin{mybox}{Bullet points}
+    \begin{itemize}
+        \item quantum repeater analogues to normal repeater?
+        \item How to realize quantum memory 
+        \item why do we need quantum memory for quantum repeaters
+        \item how much does a quantum repeater reduce attenuation
+        \item how good are today's quantum repeaters? 
+    \end{itemize}
+\end{mybox}
