pallar inte mer idag

--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -20,4 +20,4 @@ When measuring a quantum state the basis of measurement is important as this det
 
 
 \subsection{Quantum Teleportation Protocol}
-Good source: \cite{Bennett:1993}
+Good source? \cite{Bennett:1993}
