--- a/main.tex
+++ b/main.tex
@@ -27,9 +27,10 @@
 \doublespacing
 
 \input{paper/introduction}
-\input{paper/experiments.tex}
 \input{paper/complex.tex}
 \input{paper/repeaters.tex}
+\input{paper/experiments.tex}
+\input{paper/summary.tex}
 
 \clearpage
 \addcontentsline{toc}{section}{References}
