--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -21,3 +21,15 @@ When measuring a quantum state the basis of measurement is important as this det
 
 \subsection{Quantum Teleportation Protocol}
 Good source? \cite{Bennett:1993}
+
+Let Alice have a particle with a normalized state $\ket{\phi} = \alpha \ket{0}_\phi + \beta \ket{1}_\phi$, which is unknown to her, that she wants to send to Bob. Sending the particle itself is rarely possible since Alice does not necessarily know where Bob located. She also cannot measure the particle to get accurate information since the particle is part of an unknown orthonormal set. To overcome these hurdles Alice can instead opt to send, or teleport, the state $\ket{\phi}$ to Bob. \cite{Bennett:1993}
+
+To realize this teleportation both a classical channel and a non-classical channel will be used. The non-classical channel is made of an EPR-pair, where one particle is with Alice and one with Bob. Let Alice and Bob share the EPR-pair 
+\begin{equation}
+    \ket{\Psi^-} = \frac{\ket{0}_A\ket{1}_B - \ket{1}_A\ket{0}_B}{\sqrt{2}}.
+\end{equation}
+The subscript denotes if Alice or Bob has the particle. Thus, the entire system is in the state 
+\begin{equation}
+    \ket{\psi}=\ket{\phi}\ket{\Psi^-} = \frac{\alpha}{\sqrt{2}} (\ket{0}_\phi \ket{0}_A \ket{1}_B - \ket{0}_\phi \ket{1}_A \ket{0}_B) + \frac{b}{\sqrt{2}} (\ket{1}_\phi \ket{0}_A \ket{1}_B - \ket{1}_\phi \ket{1}_A \ket{0}_B)
+\end{equation}
+Rewriting the products $\ket{x}_\phi\ket{x}_A$, that is the part of the system that is with Alice, using the Bell basis the system can be written as 
