--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -16,7 +16,7 @@ An Einstein-Podolsky-Rosen-pair (EPR-pair) is a maximally entangled state of two
 \begin{equation}
     \ket{\Phi^\pm} = \frac{\ket{00} \pm \ket{11}}{\sqrt{2}} \quad \text{and} \ket{\Psi^\pm} = \frac{\ket{01} \pm \ket{10}}{\sqrt{2}}.\label{eq:epr}
 \end{equation}
-When measuring a quantum state the basis of measurement is important as this determines the possible outcome states. Common basis used are the computational basis, consisting of $\ket{0}$ and $\ket{1}$, and the Bell basis consisting of the EPR-pairs, also known as Bell states, seen in Eq. \eqref{eq:epr}. EPR-pairs and projective measurements in the Bell basis play a crucial role in quantum teleportation protocols. \cite{Nielsen:2010}
+When measuring a quantum state the basis of measurement is important as this determines the possible outcome states. Common basis used are the computational basis, consisting of $\ket{0}$ and $\ket{1}$, and the Bell basis consisting of the EPR-pairs, also known as Bell states, seen in Eq. \eqref{eq:epr}. EPR-pairs and projective measurements in the Bell basis, henceforth called Bell measurements, play a crucial role in quantum teleportation protocols. \cite{Nielsen:2010}
 
 
 \subsection{Quantum Teleportation Protocol}
@@ -26,10 +26,28 @@ Let Alice have a particle with a normalized state $\ket{\phi} = \alpha \ket{0}_\
 
 To realize this teleportation both a classical channel and a non-classical channel will be used. The non-classical channel is made of an EPR-pair, where one particle is with Alice and one with Bob. Let Alice and Bob share the EPR-pair 
 \begin{equation}
-    \ket{\Psi^-} = \frac{\ket{0}_A\ket{1}_B - \ket{1}_A\ket{0}_B}{\sqrt{2}}.
+    \ket{\Psi^-}_{AB} = \frac{\ket{0}_A\ket{1}_B - \ket{1}_A\ket{0}_B}{\sqrt{2}}.
 \end{equation}
 The subscript denotes if Alice or Bob has the particle. Thus, the entire system is in the state 
-\begin{equation}
-    \ket{\psi}=\ket{\phi}\ket{\Psi^-} = \frac{\alpha}{\sqrt{2}} (\ket{0}_\phi \ket{0}_A \ket{1}_B - \ket{0}_\phi \ket{1}_A \ket{0}_B) + \frac{b}{\sqrt{2}} (\ket{1}_\phi \ket{0}_A \ket{1}_B - \ket{1}_\phi \ket{1}_A \ket{0}_B)
-\end{equation}
+\begin{align}
+    \ket{\psi} &=\ket{\phi}\ket{\Psi^-}_{AB} \\ &= \frac{\alpha}{\sqrt{2}} (\ket{0}_\phi \ket{0}_A \ket{1}_B - \ket{0}_\phi \ket{1}_A \ket{0}_B) + \frac{b}{\sqrt{2}} (\ket{1}_\phi \ket{0}_A \ket{1}_B - \ket{1}_\phi \ket{1}_A \ket{0}_B)
+\end{align}
 Rewriting the products $\ket{x}_\phi\ket{x}_A$, that is the part of the system that is with Alice, using the Bell basis the system can be written as 
+\begin{multline}
+    \ket{\psi} = \frac{1}{2}\left[
+        \ket{\Psi^-}_{\phi A} (-\alpha\ket{0}_B - \beta\ket{1}_B)   
+        \ket{\Psi^+}_{\phi A} (-\alpha\ket{0}_B + \beta\ket{1}_B)\right.\\
+        \left.\ket{\Phi^-}_{\phi A} (\alpha\ket{1}_B + \beta\ket{0}_B)
+        \ket{\Phi^+}_{\phi A} (\alpha\ket{1}_B - \beta\ket{0}_B)
+        \right]  
+\end{multline}
+That is, if Alice performs a Bell measurement the system will collapse into one of these terms. \cite{Bennett:1993}
+
+Depending on the result of the measurement Bob will have the following states
+\begin{align}
+    A: \ket{\Psi^-}_{\phi A} &\longrightarrow B: -\alpha\ket{0}_B - \beta \ket{1}_B = -\ket{\phi}\\
+    A: \ket{\Psi^+}_{\phi A} &\longrightarrow B: -\alpha\ket{0}_B + \beta \ket{1}_B = -Z\ket{\phi}\\
+    A: \ket{\Phi^-}_{\phi A} &\longrightarrow B: \alpha\ket{1}_B + \beta \ket{0}_B = X\ket{\phi}\\
+    A: \ket{\Phi^+}_{\phi A} &\longrightarrow B: \alpha\ket{1}_B - \beta \ket{0}_B = -iY\ket{\phi}\\
+\end{align}
+That is Bob will end up with a rotated version of $\ket{\phi}$. Thus, if Alice sends the result of her measurement classically to Bob he can perform the necessary rotation to obtain the state $\ket{\phi}$. The classical channel can be a generic broadcast, i.e. a radio, which essentially means that Alice doesn't need to know where Bob is exactly. 
