--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -41,11 +41,11 @@ Rewriting the products $\ket{x}_\phi\ket{x}_A$, that is the part of the system t
 \end{multline}
 That is, if Alice performs a Bell measurement the system will collapse into one of these terms. \cite{Bennett:1993}
 
-Depending on the result of the measurement Bob will have the following states
+Depending on the result of Alice's measurement Bob will have the following states
 \begin{align}
     A: \ket{\Psi^-}_{\phi A} &\longrightarrow B: -\alpha\ket{0}_B - \beta \ket{1}_B = -\ket{\phi}\\
     A: \ket{\Psi^+}_{\phi A} &\longrightarrow B: -\alpha\ket{0}_B + \beta \ket{1}_B = -Z\ket{\phi}\\
     A: \ket{\Phi^-}_{\phi A} &\longrightarrow B: \alpha\ket{1}_B + \beta \ket{0}_B = X\ket{\phi}\\
     A: \ket{\Phi^+}_{\phi A} &\longrightarrow B: \alpha\ket{1}_B - \beta \ket{0}_B = -iY\ket{\phi}\\
 \end{align}
-That is Bob will end up with a rotated version of $\ket{\phi}$. Thus, if Alice sends the result of her measurement classically to Bob he can perform the necessary rotation to obtain the state $\ket{\phi}$. The classical channel can be a generic broadcast, i.e. a radio, which essentially means that Alice doesn't need to know where Bob is exactly. \cite{Bennett:1993}
+That is Bob will end up with a rotated version of $\ket{\phi}$. Thus, if Alice sends the result of her measurement classically to Bob he can perform the necessary rotation to obtain the state $\ket{\phi}$. The classical channel can be a generic broadcast, i.e. a radio, which essentially means that Alice doesn't need to know where Bob is exactly. Note that the choice of $\ket{\Psi^-}$ as the shared EPR-pair was arbitrary. However, which state is shared must be known by both parties since that will change what gate Bob has to apply to obtain $\ket{\phi}$. \cite{Bennett:1993}
