more on satelites

--- a/paper/experiments.tex
+++ b/paper/experiments.tex
@@ -11,7 +11,7 @@ Experimental evidence for quantum teleportation in quantum communications.
 1400 km \cite{Ren:2017}
 \begin{mybox}{Bullet points}
     \begin{itemize}
-        \item \overline{Protocol used}
+        \item Protocol used
         \item distance
         \item technical difficulties and innovations
         \item what does this mean for quantum communications?
@@ -33,7 +33,12 @@ The result from this measurment was then classically sent to the Satellite. This
 $\ket{\psi^{+}}_{12} = (\ket{H}_1\ket{H}_2 + \ket{V}_1\ket{V}_2)/\sqrt{2}$ the photon sent to the Satellite (photon 3) carries the state that photon 1 was in originally
 and if the measured state is $\ket{\psi^{-}}_{12} = (\ket{H}_1\ket{H}_2 - \ket{V}_1\ket{V}_2)/\sqrt{2}$, the state of photon 3 is equivalent of the state of photon 1 shifted $\pi$.
 
+In this paper it was shown that a photon's quantum state could be teleported over a distance up to 1400 kilometers, from the ground station to the Satellite in low-Earth orbit. The biggest technical 
+difficulties with this approach is the atmospheric turbulence causing the beam to wander and broaden, leading to significant signal losses. This was dealt with by using a 
+narrow beam divergence from a high precision telescope and an advanced acquiring, pointing and tracking system.
 
+In the future, this method could be used to create a global quantum internet, connecting quantum computers across the globe and introducing secure cryptography protocols. 
+This also raises the possibility of letting several quantum processors work together on a single problem, enhancing the efficacy of quantum computers.
 
 \subsection{Fibre Network Based}
 100 km \cite{Takesue:2015}. Metropolitan \cite{Valivarthi:2016}
