--- a/paper/experiments.tex
+++ b/paper/experiments.tex
@@ -11,7 +11,7 @@ Experimental evidence for quantum teleportation in quantum communications.
 1400 km \cite{Ren:2017}
 \begin{mybox}{Bullet points}
     \begin{itemize}
-        \item \overline{Protocol used}
+        \item Protocol used
         \item distance
         \item technical difficulties and innovations
         \item what does this mean for quantum communications?
