start of repeaters

--- a/paper/repeaters.tex
+++ b/paper/repeaters.tex
@@ -9,3 +9,10 @@ Quantum internet \cite{Azuma:2023}
         \item how good are today's quantum repeaters? 
     \end{itemize}
 \end{mybox}
+
+\subsection{Entanglement swapping}
+
+\subsection{Quantum repeater protocol}
+No cloning but instead entanglement swapping
+
+\subsection{Experimental realizations}
