--- a/paper/repeaters.tex
+++ b/paper/repeaters.tex
@@ -29,7 +29,7 @@ If long distance distribution of entanglement were to be achieved through optica
  \begin{equation}
     p_g(l) = e^{-l/L_{\text{att}}}/2,
  \end{equation}
- where $l$ is the fiber length and $L_{\text{att}}$ is the attenuation length.
+ where $l$ is the fiber length and $L_{\text{att}}$ is the attenuation length. \textbf{Något om hur $L_{att}$ är definierat}
  Once neighboring parties share entanglement with a repeater node, entanglement swapping extends the entanglement between more distant parties.
  This is achieved via a Bell measurement on the quantum memories at the repeater node, succeeding with probability $p_s = 1/2$ in the ideal case.
  Without repeaters, directly linking Alice and Bob requires an average number of trials 
