--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -49,3 +49,6 @@ Depending on the result of Alice's measurement Bob will have the following state
     A: \ket{\Phi^+}_{\phi A} &\longrightarrow B: \alpha\ket{1}_B - \beta \ket{0}_B = -iY\ket{\phi}\\
 \end{align}
 That is Bob will end up with a rotated version of $\ket{\phi}$. Thus, if Alice sends the result of her measurement classically to Bob he can perform the necessary rotation to obtain the state $\ket{\phi}$. The classical channel can be a generic broadcast, i.e. a radio, which essentially means that Alice doesn't need to know where Bob is exactly. Note that the choice of $\ket{\Psi^-}$ as the shared EPR-pair was arbitrary. However, which state is shared must be known by both parties since that will change what gate Bob has to apply to obtain $\ket{\phi}$. \cite{Bennett:1993}
+
+\subsection{Reasons and Applications}
+Quantum communications and quantum computing are two large fields being researched at the moment, and it is important to ask the question of why this effort is worth it. For one thing in the age of information, sending and receiving data is increasingly more important as we rely more and more on technology. A corollary of this is then that secure communication is of the utmost importance to keep our personal information secure. 
